Preventing Horizontal Scrolling in Mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,8 @@
 
 html, body {
   height: 100%;
+  width: 100%;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
